@@ -23,6 +23,10 @@ setup(
         "Topic :: Multimedia :: Graphics :: Graphics Conversion",
         "Programming Language :: Python :: 2",
         "Programming Language :: Python :: 2.7",
+        "Programming Language :: Python :: 3",
+        "Programming Language :: Python :: 3.6",
+        "Programming Language :: Python :: 3.7",
+        "Programming Language :: Python :: 3.8",
         "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
     ],
     url="http://github.com/gasman/pyrecoil",
